# zeroconf

./: .travis.yml  CMakeLists.txt  README.md  travis-gmock.sh
msvc110/: BasicDemo.vcxproj  Zeroconf.sln  ZeroconfTest.vcxproj
samples/basic_demo/: main.cpp
src/: zeroconf-detail.hpp  zeroconf-util.hpp  zeroconf.hpp
test/: Test_Parse.cpp  Test_WriteFqdn.cpp  main.cpp
